gcc/testsuite/gdc.test/compilable/test20958.d
// EXTRA_FILES: imports/u20958.d
import imports.u20958;
