gcc/testsuite/gdc.test/fail_compilation/diag10327.d
import imports.test10327;  // package.d missing
